--- a/src/common/templates/index.html
+++ b/src/common/templates/index.html
@@ -1,7 +1,7 @@
 <ion-view title="首页" cm-hide-tabs="false">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
-        <div class="logo-title"></div>
+        <div class="title logo-title"></div>
     </ion-header-bar>
 
     <ion-content class="index-panel stable-bg">
