音频和文章页面删除banner图片

--- a/src/common/templates/freeInfo.html
+++ b/src/common/templates/freeInfo.html
@@ -27,9 +27,9 @@
 
         <div class="light-bg pb" ng-if="freeInfo.sellAbled">
             <!-- banner图 -->
-            <div class="banner stable-bg" ng-if="freeInfo.genreName != 'video'">
+            <!-- <div class="banner stable-bg" ng-if="freeInfo.genreName != 'video'">
                 <img class="img" ng-src="{{freeInfo.baseData.picUrl}}" />
-            </div>
+            </div> -->
 
             <!-- 视频 -->
             <div class="video-info-container mb" id="video-container" 
