--- a/src/common/templates/videoInfo.html
+++ b/src/common/templates/videoInfo.html
@@ -26,9 +26,9 @@
         <div ng-if="videoInfo.sellAbled">
 
             <!-- banner图 -->
-            <div class="banner stable-bg" ng-if="videoInfo.genreName != 'video'">
+            <!-- <div class="banner stable-bg" ng-if="videoInfo.genreName != 'video'">
                 <img class="img" ng-src="{{videoInfo.baseData.picUrl}}" />
-            </div>
+            </div> -->
 
             <!-- 视频 -->
             <div class="video-info-container mb" id="video-container" 
