视频播放及下载

--- a/src/common/resources/sass/_navBar.scss
+++ b/src/common/resources/sass/_navBar.scss
@@ -36,7 +36,8 @@
         min-height: 34px;
     }
 
-    .ion-ios-arrow-left {
+    .ion-ios-arrow-left,
+    .ion-android-arrow-down {
 
         &:before {
             font-size: 24px !important;
