--- a/src/mobile/resources/sass/main.scss
+++ b/src/mobile/resources/sass/main.scss
@@ -37,6 +37,7 @@
 "commentInfo",
 "cart",
 "listEmpty",
+"video",
 
 "pages/index",
 "pages/categoryList",
@@ -67,6 +68,7 @@
 "pages/consigneeList",
 "pages/consigneeAdd",
 "pages/selectAddressRegion",
+"pages/downloadVideoList",
 
 "pages/login",
 "pages/register",
