结算中心－收货地址／优惠券／发票／金额／支付方式

--- a/src/common/resources/sass/_scaffolding.scss
+++ b/src/common/resources/sass/_scaffolding.scss
@@ -40,17 +40,17 @@ ion-scroll {
 }
 
 // 只有第一个弹出层的遮罩层显示
-.active {
+.modal-backdrop.active {
 
     .modal-backdrop-bg {
         opacity: 0.7;
     }
 
-    & ~ .active {
-        .modal-backdrop-bg {
-            opacity: 0
-        }
-    }
+    // & ~ .active {
+    //     .modal-backdrop-bg {
+    //         opacity: 0.7;
+    //     }
+    // }
 }
 
 
