--- a/src/mobile/resources/sass/main.scss
+++ b/src/mobile/resources/sass/main.scss
@@ -79,6 +79,9 @@
 "pages/paymentOrderSuccess",
 "pages/paymentOrderFail",
 "pages/choosePayment",
+"pages/invoice",
+"pages/checkoutAmount",
+"pages/coupon",
 
 "pages/purchasedList",
 "pages/videoInfo",
