--- a/src/common/resources/sass/_checkoutModal.scss
+++ b/src/common/resources/sass/_checkoutModal.scss
@@ -3,7 +3,7 @@
 .bar-primary-modal {
     position: relative;
     z-index: 1;
-    padding-left: $distance-horizontal;
+    padding: 0 8px 0 12px;
     height: 34px;
     line-height: 34px;
     color: $nav-bar-color;
@@ -26,11 +26,11 @@
         }
     }
 
-    .icon-close:before {
+    .icon-close-modal:before {
         font-size: 30px;
     }
 
-    .icon-back:before {
+    .icon-back-modal:before {
         font-size: 20px;
     }
 }
