--- a/src/common/templates/modals/choosePayment.html
+++ b/src/common/templates/modals/choosePayment.html
@@ -1,31 +1,42 @@
 <!-- 选择支付方式 -->
-<ion-modal-view class="choose-payment-modal-view stable-bg">
+<ion-modal-view class="checkout-modal-panel">
 
-    <ion-header-bar class="bar-primary">
-        <button class="button button-clear left-btn" ng-click="choosePayment.close()">
-            <i class="icon ion-ios-arrow-left"></i>
-        </button>
-        <h1 class="title">支付方式</h1>
-    </ion-header-bar>
+    <div class="bar-primary-modal" ng-click="modals.choosePayment.close()">
+        支付方式
+        <i class="icon-close-modal icon ion-ios-close-empty"></i>
+    </div>
 
-    <ion-content scroll="false">
+    <ion-content class="choose-payment-modal-panel" scroll="false">
 
-        <div class="payment-content">
-            <div class="payment-txt">请选择支付方式：</div>            
+        <div class="payment-content">           
             <ul class="payment-list">
-                <li class="payment-item row" ng-click="choosePayment.goPay('AliPay')">
-                    <i class="iconfont icon-zhifubao col col-adaptive"></i>
-                    <div class="payment-text col">使用支付宝付款</div>
-                    <i class="iconfont icon-rightarrow col col-adaptive"></i>
+                <li class="payment-item row" ng-click="choosePayment.selected('AliPay')">
+                    <i class="iconfont icon-zhifubao col col-center col-adaptive"></i>
+                    <div class="payment-text col col-center">使用支付宝付款</div>
+                    <label class="radio radio-label col col-adaptive">
+                        <input type="radio" value="AliPay" name="payment"
+                            ng-model="choosePayment.selectedPayment" />
+                    </label>
+
                 </li>
-                <li class="payment-item row" ng-click="choosePayment.goPay('WeChat')">
-                    <i class="iconfont icon-weixin col col-adaptive"></i>
-                    <div class="payment-text col">使用微信付款</div>
-                    <i class="iconfont icon-rightarrow col col-adaptive"></i>
+                <li class="payment-item row" ng-click="choosePayment.selected('WeChat')">
+                    <i class="iconfont icon-weixin col col-center col-adaptive"></i>
+                    <div class="payment-text col col-center">使用微信付款</div>
+                    <label class="radio radio-label col col-adaptive">
+                        <input type="radio" value="WeChat" name="payment"
+                            ng-model="choosePayment.selectedPayment" />
+                    </label>
                 </li>
             </ul>
         </div>
 
     </ion-content>
+
+    <ion-footer-bar class="hide-on-keyboard-open">
+        <button type="button" class="button button-block button-primary" 
+            ng-click="choosePayment.confirmPayment()">
+            确认
+        </button>
+    </ion-footer-bar>
 
 </ion-modal-view>
