--- a/src/common/templates/shoppingCart.html
+++ b/src/common/templates/shoppingCart.html
@@ -54,7 +54,7 @@
                         <div class="item-price">
                             <span class="price">{{item.sku.prices.offerPrice.price | currency: '¥'}}/年</span>
                             <div class="item-counter">
-                                <span ng-if="cart.mode == 1">x{{item.quantity}}</span>
+                                <span class="numbers" ng-if="cart.mode == 1">x{{item.quantity}}</span>
                                 <cm-counter ng-if="cart.mode == 2"
                                             ng-model="item.quantity"
                                             data-max-num="999"
