--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -44,7 +44,7 @@
                 <div class="col">
                     <div class="item-row row">
                         <span class="item-text col">优惠券</span>
-                        <span class="item-tip col col-adaptive"></span>
+                        <span class="item-tip col col-adaptive">{{user.countCoupon}}</span>
                         <i class="iconfont icon-rightarrow col col-adaptive"></i>
                     </div>
                 </div>
