--- a/src/common/templates/modals/checkout.html
+++ b/src/common/templates/modals/checkout.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="checkout-items">
-            <div class="items-title"><i class="icon ion-ios-list-outline"></i>商品清单</div>
+            <div class="items-title"><i class="iconfont icon-gouwu"></i></i>商品清单</div>
             <ul>
                 <li class="checkout-item clearfix" ng-repeat="item in checkout.data.items">
                     <div class="item-img fl">
