--- a/src/common/resources/sass/pages/_checkout.scss
+++ b/src/common/resources/sass/pages/_checkout.scss
@@ -58,9 +58,9 @@
         @extend %font-size-big;
         background: superfine-border-bottom($line-color);
 
-        .icon {
+        .iconfont {
             margin-right: 10px;
-            font-size: 15px;
+            font-size: 16px;
             color: #4a4a4a;
         }
     }
