--- a/src/common/templates/orderInfo.html
+++ b/src/common/templates/orderInfo.html
@@ -25,8 +25,24 @@
                 <div class="col col-adaptive status">{{orderInfo.info.orderStatusLabel}}</div>
             </div>
             <div class="order-info">
-                <!-- <p class="info">订单总计：<span class="txt">¥12.90</span></p> -->
-                <p class="info">订单编号：<span class="txt">{{orderInfo.info.orderNumber}}</span></p>
+                <p class="info">
+                    下单时间：{{orderInfo.info.placedTime}}
+                </p>
+                <p class="info">
+                    订单总计：{{orderInfo.info.payAmount | currency: '¥'}}(包含运费)
+                </p>
+                <p class="info">
+                    订单编号：{{orderInfo.info.orderNumber}}
+                </p>
+                <p class="info" ng-if="orderInfo.expressInfo.logisticsLabel">
+                    配送公司：{{orderInfo.expressInfo.logisticsLabel}}
+                </p>
+                <p class="info order-info-copy" 
+                    ng-if="orderInfo.expressInfo.logisticsNumber"
+                    ng-click="orderInfo.copyExpressNumber()">
+                    快递单号：{{orderInfo.expressInfo.logisticsNumber}}
+                    <button class="button button-outline button-primary order-copy">复制</button>
+                </p>
             </div>
         </div>
 
@@ -56,7 +72,10 @@
                     <div class="item-info">
                         <div class="item-name">{{item.title}}</div>
                         <div class="item-content">{{item.subtitle}}</div>
-                        <div class="item-price">{{item.price | currency: '¥'}}/年</div>
+                        <div class="item-price">
+                            {{item.price | currency: '¥'}}/年
+                            <span class="numbers">x{{item.nums}}</span>
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -64,14 +83,51 @@
 
         <div class="order-row">
             <p class="order-row-cont row">
-                <span class="col col-tit">支付方式</span>
+                <span class="col col-adaptive col-tit">支付方式</span>
                 <span class="col col-txt">{{orderInfo.info.paymentType}}</span>
             </p>
-            <p class="order-row-amount">
-                <span>实付款：</span>
-                <span class="amount">{{orderInfo.info.payAmount | currency: '¥'}}</span>
+            <p class="order-row-cont row">
+                <span class="col col-adaptive col-tit">配送方式</span>
+                <span class="col col-txt">快递</span>
             </p>
-            <p class="order-date">下单时间：{{orderInfo.info.placedTime}}</p>
+            <p class="order-row-cont row">
+                <span class="col col-adaptive col-tit">优惠券</span>
+                <span class="col col-txt">{{orderInfo.couponInfo}}</span>
+            </p>
+            <div class="order-invoice-row-cont" ng-if="orderInfo.invoice.length">
+                <p class="order-invoice-row">
+                    <span class="col-invoice-tit">发票内容：</span>
+                    <span class="col-invoice-txt">{{orderInfo.invoiceInfo.content}}</span>
+                </p>
+                <p class="order-invoice-row">
+                    <span class="col-invoice-tit">发票类型：</span>
+                    <span class="col-invoice-txt">{{orderInfo.invName[orderInfo.invoiceInfo.type-1]}}</span>
+                </p>
+                <p class="order-invoice-row">
+                    <span class="col-invoice-tit">发票抬头：</span>
+                    <span class="col-invoice-txt">{{orderInfo.invoiceName[orderInfo.invoiceInfo.invoiceType-1]}}-{{orderInfo.invoiceInfo.title}}</span>
+                </p>
+                <p class="order-invoice-row" ng-if="orderInfo.invoiceInfo.taxpayerNo">
+                    <span class="col-invoice-tit">企业税号：</span>
+                    <span class="col-invoice-txt">{{orderInfo.invoiceInfo.taxpayerNo}}</span>
+                </p>
+                <p class="order-invoice-row" ng-if="orderInfo.invoiceInfo.email">
+                    <span class="col-invoice-tit">发送邮箱：</span>
+                    <span class="col-invoice-txt">{{orderInfo.invoiceInfo.email}}</span>
+                </p>
+            </div>
+            <p class="order-row-cont row" ng-if="!orderInfo.invoice.length">
+                <span class="col col-adaptive col-tit">发票内容</span>
+                <span class="col col-txt">不开具发票</span>
+            </p>
+            <p class="order-row-cont row">
+                <span class="col col-adaptive col-tit refund-tips">退换货说明</span>
+                <span class="col col-txt"><i class="icon ion-ios-help-outline"></i></span>
+            </p>
+        </div>
+
+        <div class="order-receive-info" ng-if="orderInfo.info.paymentStatus == 1 && orderInfo.info.orderStatus != 8">
+            距离自动确认签收还有{{orderInfo.expressInfo.countDownTime}}天时间
         </div>
         
     </ion-content>
