--- a/src/common/resources/sass/font/_iconfont.scss
+++ b/src/common/resources/sass/font/_iconfont.scss
@@ -79,3 +79,106 @@
 
 .icon-gongkaopeixun:before { content: "\e640"; }
 
+.icon-lajitong:before { content: "\e602"; }
+
+.icon-paicha:before { content: "\e603"; }
+
+.icon-lixian:before { content: "\e604"; }
+
+.icon-qikan:before { content: "\e606"; }
+
+.icon-qikan1:before { content: "\e607"; }
+
+.icon-lvdu:before { content: "\e608"; }
+
+.icon-qita:before { content: "\e60a"; }
+
+.icon-fenxiang:before { content: "\e60b"; }
+
+.icon-huancun:before { content: "\e60c"; }
+
+.icon-gouwuche:before { content: "\e60d"; }
+
+.icon-duihao:before { content: "\e60e"; }
+
+.icon-huancun1:before { content: "\e610"; }
+
+.icon-dangzhengwenjian:before { content: "\e614"; }
+
+.icon-dianzizhengji:before { content: "\e615"; }
+
+.icon-jilu:before { content: "\e616"; }
+
+.icon-jingbao:before { content: "\e617"; }
+
+.icon-paicha1:before { content: "\e618"; }
+
+.icon-lixian1:before { content: "\e619"; }
+
+.icon-qikan2:before { content: "\e61a"; }
+
+.icon-qikan3:before { content: "\e61b"; }
+
+.icon-qita1:before { content: "\e61c"; }
+
+.icon-quanbu:before { content: "\e61d"; }
+
+.icon-lvdu1:before { content: "\e61e"; }
+
+.icon-quxiao:before { content: "\e61f"; }
+
+.icon-quanbu1:before { content: "\e620"; }
+
+.icon-saoyisao:before { content: "\e622"; }
+
+.icon-richang:before { content: "\e623"; }
+
+.icon-shangcheng:before { content: "\e625"; }
+
+.icon-shangxiajiantouhover:before { content: "\e626"; }
+
+.icon-remenshangpin:before { content: "\e627"; }
+
+.icon-shangchang:before { content: "\e628"; }
+
+.icon-shipinbofangyingpian:before { content: "\e629"; }
+
+.icon-shangxiajiantouhover1:before { content: "\e62a"; }
+
+.icon-shoucang:before { content: "\e62b"; }
+
+.icon-shuzi:before { content: "\e62c"; }
+
+.icon-shuoming:before { content: "\e62e"; }
+
+.icon-sousuo:before { content: "\e62f"; }
+
+.icon-wangge:before { content: "\e631"; }
+
+.icon-suoyoushangpin:before { content: "\e632"; }
+
+.icon-xiazai1:before { content: "\e638"; }
+
+.icon-xiazai2:before { content: "\e641"; }
+
+.icon-weixin1:before { content: "\e642"; }
+
+.icon-xiaoxi:before { content: "\e643"; }
+
+.icon-xiangmujianshe:before { content: "\e644"; }
+
+.icon-xiaoxi1:before { content: "\e645"; }
+
+.icon-zanting:before { content: "\e646"; }
+
+.icon-xinxi:before { content: "\e647"; }
+
+.icon-yinpin:before { content: "\e648"; }
+
+.icon-zan:before { content: "\e649"; }
+
+.icon-zengjia:before { content: "\e64a"; }
+
+.icon-zengjia1:before { content: "\e64b"; }
+
+.icon-zhaopian:before { content: "\e64c"; }
