会员中心－观看记录

--- a/src/common/resources/sass/_navBar.scss
+++ b/src/common/resources/sass/_navBar.scss
@@ -21,6 +21,17 @@
         }
     }
 
+    .right-buttons {
+
+        .iconfont {
+            font-size: 24px;
+        }
+
+        .bar-button-text {
+            font-size: 14px;
+        }
+    }
+
     &.bar-light {
         background-image: none;
     }
