--- a/src/mobile/resources/sass/main.scss
+++ b/src/mobile/resources/sass/main.scss
@@ -70,6 +70,7 @@
 "pages/consigneeAdd",
 "pages/selectAddressRegion",
 "pages/downloadVideoList",
+"pages/viewVideoList",
 
 "pages/login",
 "pages/register",
